force-app/src/objects/ffbf__PaymentTest__c.object
<CustomObject>
    <fields>
        <fullName>ffbf__AccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Currency</label>
        <referenceTo>ffbf__AccountingCurrencyTest__c</referenceTo>
        <relationshipLabel>Payment Tests</relationshipLabel>
        <relationshipName>PaymentTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbf__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>ffbf__BankAccountTest__c</referenceTo>
        <relationshipName>BankFormatPaymentTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentCurrencyName__c</fullName>
        <formula>ffbf__AccountCurrency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Currency Name</label>
        <type>Text</type>
    </fields>
    <label>Payment Test</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>